PROJECT(SceneEdit)

INCLUDE(InstallRequiredSystemLibraries)
SET(CPACK_PACKAGE_VENDOR "André Normann")
SET(CPACK_PACKAGE_VERSION_MAJOR "0")
SET(CPACK_PACKAGE_VERSION_MINOR "1")
SET(CPACK_PACKAGE_VERSION_PATCH "0")
SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE.GPL")
IF(WIN32)
    SET(CPACK_NSIS_URL_INFO_ABOUT "http://sceneedit.sourceforge.net") 
    SET(CPACK_NSIS_CONTACT "andre.normann@email.de")
    SET(CPACK_NSIS_MODIFY_PATH ON)
ENDIF(WIN32)
INCLUDE(CPack)

SET(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/CMakeModules;${CMAKE_MODULE_PATH}")

SET(CMAKE_DEBUG_PREFIX "d")

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.0)

# find and setup Qt4 for this project
FIND_PACKAGE(OSG)
FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(OpenGL)
FIND_PACKAGE(Boost)

SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

ADD_SUBDIRECTORY(src)


